#pragma once
#include <string>
class Shape {
 public:
  virtual std::string str() const = 0;
};
